--- a/cyclo-master-server/views/index.jade
+++ b/cyclo-master-server/views/index.jade
@@ -1,9 +1,23 @@
 doctype html
 html
   head
+    title Cyclo REST Service
   body
-    form(action='/analyse', method='post', enctype='application/json')
-      label
-        | Repository Link:  
-        input(type='text', name='repoURL')
-      input(type='submit', value='Submit')
+    div(style="position: absolute; width: 100%; height: 100%; margin: auto; text-align: center;")
+      img(src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Node.js_logo_2015.svg/2000px-Node.js_logo_2015.svg.png" style="width: 50%;")
+      h1(style="font-family:helvetica; font-size:60px") Cyclo REST Service
+      a(href="https://github.com/alcarasj/cyclo-rest-service")
+        img(src="https://image.flaticon.com/icons/png/512/25/25231.png", style="width: 5%;")
+      h2(style="font-family:helvetica;") CS4400 REST Service Development Task
+      h3(style="font-family:helvetica;") Jerico Alcaras, 14317110
+      h3(style="font-family:helvetica;") Calculates the cyclomatic complexity of JavaScript files in a GitHub repository.
+      form(action='/analyse', method='get', enctype='application/json', style="margin: auto;")
+        label(style="font-family:helvetica;")
+          | GitHub Repository URL:&nbsp;
+          input(type='text', name='repoURL', style="width: 65%;", placeholder="Example: https://github.com/nodegit/nodegit")
+        input(type='submit', value='Submit', onclick='showLoading();')
+      h3(id="loading", style="font-family:helvetica; display: none") Analysing (this may take a while)...
+      script(type="text/javascript").
+        function showLoading() {
+          document.getElementById('loading').style.display = "block";
+        }
